# uno

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  ClassName.h  ClassName2.h  function.cpp  main.cpp
src/schema/: Card.cpp  Card.h  card-constants.h
test/: CMakeLists.txt  functiontest.cpp  main.cpp  test.cpp  test2.cpp
test/src/schema/: CardTest.cpp
